day-7/nginx-loadbalancer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    name: http
    targetPort: 80
  type: LoadBalancer
  externalIPs:
  - 192.168.0.106
